# msilo

./: CMakeLists.txt  Makefile  common.h  ms_amqp.c  ms_amqp.h  ms_msg_list.c  ms_msg_list.h  msfuncs.c  msfuncs.h  msg_retry.c  msg_retry.h  msilo.c  msilo.h  rabbit.c  rabbit.h
cacheLogic/: ApiHelper.cpp  ApiHelper.hpp  MessageListElement.cpp  MessageListElement.hpp  MessageListElementWrapper.cpp  MessageListElementWrapper.hpp  MessageThreadElement.cpp  MessageThreadElement.h  MessageThreadElement.hpp  MessageThreadManager.cpp  MessageThreadManager.h  MessageThreadManager.hpp  MessageThreadMap.cpp  MessageThreadMap.h  MessageThreadMap.hpp  MessageThreadSender.cpp  MessageThreadSender.h  MessageThreadSender.hpp  MessageThreadWrapper.cpp  MessageThreadWrapper.h  SenderJobQueue.cpp  SenderJobQueue.h  SenderJobQueue.hpp  SipsAllocator.hpp  SipsHeapAllocator.hpp  SipsSHMAllocator.hpp  apiDeps.h  common.h  logic.cpp  logic.h  logic.hpp  message_cache.c  message_cache.h  message_cache2.cpp  one_per_user.c  one_per_user.h
cacheLogicDeprecated/: message_cache2.h
